# Advanced-Thesaurus

./: README.md  main.py  pyproject.toml
