[tool.poetry]
name = "advanced thesaurus"
version = "0.1.0"
description = "An advanced thesaurus that uses lexical fields to find synonyms of words"
authors = ["Dimitriy Kruglikov <dimitriy.kruglikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
PrettyPrintTree = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
